# locai

./: .clippy.toml  .dockerignore  .gitignore  .release-please-manifest.json  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.cli  Dockerfile.host-cache  Dockerfile.original  Dockerfile.sccache  Makefile  README.md  docker-build-host-cache.sh  docker-build-with-host-cache.sh  docker-compose.cli.yml  docker-compose.sccache.yml  docker-compose.yml  docker-sccache-build.sh  env.example  release-please-config.json  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  docker-build.yml  release.yml
docs/: API.md  API_ENHANCED_SEARCH_EXAMPLES.md  API_RELATIONSHIPS.md  ARCHITECTURE.md  BATCH_OPERATIONS.md  CHANGELOG.md  CLI_DESIGN.md  DATA_DIRECTORY_GUIDE.md  DESIGN.md  DOCKER_CLI.md  DOCKER_QUICK_START.md  EMBEDDING_API_DESIGN.md  ENTITY_EXTRACTION.md  FEATURES.md  LIFECYCLE_TRACKING.md  LIVE_QUERIES.md  MEMORY_VERSIONING.md  PLATFORM_SUPPORT.md  README.md  RELEASE.md  SEARCH.md  SHELL_COMPLETION_INSTALLATION.md  SURREALDB_VECTOR_INDEX_REQUIREMENTS.md
docs/architecture/: ADR-001-memory-lifecycle-extensibility.md  README.md
docs/guides/: BATCH_OPERATIONS.md  DOCKER.md  DOCKER_CLI.md  ENHANCED_SEARCH.md  TEMPORAL_FEATURES.md
examples/: enhanced_search_scoring.rs  hybrid_search_local.rs  locai.toml  search_mode_comparison.rs
examples/advanced/: advanced_search_showcase.rs  search_intelligence_demo.rs
examples/basic/: README_BYOE.md  byoe_cohere_embeddings.rs  byoe_openai_embeddings.rs  getting_started.rs  relationship_enrichment_callback.rs  server_deployment.rs
examples/configs/: hybrid_entity_extraction.toml
examples/entity_extraction/modernbert/: Cargo.toml  README.md
examples/entity_extraction/modernbert/examples/: simple_extraction.rs
examples/entity_extraction/modernbert/src/: extractor.rs  legacy.rs  lib.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalyticsPanel.tsx  D3GraphVisualization.tsx  GraphControls.tsx  GraphVisualization.tsx  NodeDetailsPanel.tsx  RealtimeEventFeed.tsx  ThemeToggle.tsx  Toast.tsx  ToastContainer.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useTooltipPosition.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: graphStore.ts
locai/: CHANGELOG.md  Cargo.toml  build.rs
locai-cli/: CHANGELOG.md  Cargo.toml  README_QUICKSTART_EMBEDDINGS.md
locai-cli/scripts/: generate_quickstart_embeddings.sh  verify_embeddings.py
locai-cli/src/: args.rs  commands.rs  context.rs  lib.rs  main.rs  output.rs  quickstart_embeddings.json  utils.rs
locai-cli/src/handlers/: batch.rs  entity.rs  graph.rs  memory.rs  mod.rs  quickstart.rs  relationship.rs  relationship_type.rs  tutorial.rs
locai-cli/src/help/: explanations.rs  mod.rs
locai-cli/tests/: cli_integration_tests.rs
locai-server/: CHANGELOG.md  Cargo.toml  build.rs
locai-server/src/: cli.rs  error.rs  lib.rs  main.rs  state.rs  websocket.rs
locai-server/src/api/: auth.rs  auth_endpoints.rs  auth_service.rs  batch.rs  dto.rs  dto_tests.rs  entities.rs  graph.rs  memories.rs  mod.rs  relationship_types.rs  relationships.rs  versions.rs  webhooks.rs
locai-server/src/config/: mod.rs
locai-server/src/messaging/: handlers.rs  mod.rs  server.rs
locai-server/tests/: auth_tests.rs  integration_tests.rs  websocket_tests.rs
locai/benches/: rfc_001_benchmarks.rs
locai/examples/: advanced_usage.rs  byoe_cohere_embeddings.rs  byoe_openai_embeddings.rs  config_example.rs  conversation_history.rs  embedded_messaging.rs  embedded_messaging_advanced.rs  graph_operations.rs  hybrid_search_local.rs  lifecycle_tracking.rs  memory_versioning.rs  rag_fusion_example.rs  search_mode_comparison.rs  shared_storage_example.rs  simple_api_demo.rs
locai/src/: lib.rs  runtime.rs  simple.rs
locai/src/batch/: executor.rs  mod.rs  types.rs
locai/src/config/: builder.rs  loader.rs  mod.rs  models.rs  tests.rs  validation.rs
locai/src/core/: memory_manager.rs  mod.rs  search.rs  util.rs
locai/src/entity_extraction/: automatic_relationships.rs  basic_extractor.rs  config.rs  mod.rs  pipeline.rs  resolution.rs  traits.rs  types.rs
locai/src/entity_extraction/post_processors/: deduplicator.rs  mod.rs
locai/src/entity_extraction/validators/: confidence.rs  entity_merger.rs  mod.rs
locai/src/hooks/: mod.rs  registry.rs  traits.rs  webhook.rs
locai/src/logging/: filters.rs  formatters.rs  middleware.rs  mod.rs  tests.rs
locai/src/memory/: analytics.rs  builders.rs  consolidation.rs  entity_operations.rs  graph_analysis.rs  graph_operations.rs  messaging.rs  mod.rs  operations.rs  search_extensions.rs  utils.rs  versioning.rs
locai/src/messaging/: embedded.rs  filters.rs  mod.rs  remote.rs  stream.rs  types.rs  websocket.rs
locai/src/ml/: config.rs  embedding.rs  error.rs  mod.rs  model_manager.rs  tokenizer.rs
locai/src/ml/candle/: builder.rs  config.rs  mod.rs  model.rs  tests.rs  tokenizer.rs  utils.rs
locai/src/models/: memory.rs  mod.rs
locai/src/relationships/: analyzer.rs  dynamics.rs  enforcement.rs  manager.rs  metrics.rs  mod.rs  registry.rs  storage.rs  type_storage.rs  types.rs  validation.rs
locai/src/search/: calculator.rs  mod.rs  scoring.rs
locai/src/storage/: config.rs  errors.rs  filters.rs  lifecycle.rs  mod.rs  models.rs  traits.rs
locai/src/storage/shared_storage/: base.rs  config.rs  entity.rs  graph.rs  intelligence.rs  live_query.rs  memory.rs  memory_version.rs  mod.rs  relationship.rs  schema.rs  vector.rs  version.rs  version_access.rs  version_cache.rs
locai/tests/: README.md  batch_operations_integration.rs  entity_extraction_tests.rs  lifecycle_tracking_integration.rs  memory_versioning_test.rs  model_manager_tests.rs  rfc_001_integration.rs  search_functionality_tests.rs  search_intelligence_tests.rs  shared_storage_live_query_tests.rs  shared_storage_test.rs  simple_api_test.rs  unified_storage_test.rs  vector_store_integration_tests.rs  version_store_tests.rs
(+7 files in other folders)
