[workspace]
members = [
    "locai",
    "locai-server",
    "locai-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Locai Contributors"]
repository = "https://github.com/blakebarnett/locai"
license = "MIT"
rust-version = "1.90.0"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# SurrealDB recommended release profile for optimal embedded performance
[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
