[package]
name = "locai_modernbert_extractor"
version = "0.1.0"
edition = "2021"
description = "ModernBERT entity extractor implementation for Locai"
license = "MIT"

[dependencies]
locai = { path = "../../../locai" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"

# Candle dependencies for ModernBERT
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.4"
tokenizers = "0.20"
tracing-subscriber = "0.3"

[[example]]
name = "simple_extraction"
path = "examples/simple_extraction.rs" 